Added keycloak registration
