# admin/src/main/java/com/github/nk/klusterfuck/admin/controllers/RegisterRequest.java
@@ -1,0 +1,43 @@
+package com.github.nk.klusterfuck.admin.controllers;
+
+/**
+ * Created by nk on 20/6/17.
+ */
+public class RegisterRequest {
+	private String firstName;
+	private String lastName;
+	private String email;
+	private String password;
+
+	public String getFirstName() {
+		return firstName;
+	}
+
+	public void setFirstName(String firstName) {
+		this.firstName = firstName;
+	}
+
+	public String getLastName() {
+		return lastName;
+	}
+
+	public void setLastName(String lastName) {
+		this.lastName = lastName;
+	}
+
+	public String getEmail() {
+		return email;
+	}
+
+	public void setEmail(String email) {
+		this.email = email;
+	}
+
+	public String getPassword() {
+		return password;
+	}
+
+	public void setPassword(String password) {
+		this.password = password;
+	}
+}
