# client/src/main/resources/swagger.json
@@ -60,6 +60,30 @@
         }
       }
     },
+    "/api/v1/auth/register" : {
+      "post" : {
+        "tags" : [ "Auth" ],
+        "summary" : "register",
+        "description" : "",
+        "operationId" : "register",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/RegisterRequest"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "type" : "string"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/connectors" : {
       "get" : {
         "tags" : [ "Connectors" ],
@@ -301,10 +325,7 @@
               }
             }
           }
-        },
-        "security" : [ {
-          "Bearer" : [ "header" ]
-        } ]
+        }
       },
       "post" : {
         "tags" : [ "Functions" ],
@@ -839,6 +860,23 @@
           "format" : "int32"
         },
         "body" : {
+          "type" : "string"
+        }
+      }
+    },
+    "RegisterRequest" : {
+      "type" : "object",
+      "properties" : {
+        "firstName" : {
+          "type" : "string"
+        },
+        "lastName" : {
+          "type" : "string"
+        },
+        "email" : {
+          "type" : "string"
+        },
+        "password" : {
           "type" : "string"
         }
       }
